src/scanner.output
Rules useless in parser due to conflicts

   76 exp_b: operando
   77      | literal_numerico


State 95 conflicts: 24 reduce/reduce
State 97 conflicts: 2 shift/reduce
State 98 conflicts: 24 reduce/reduce
State 128 conflicts: 6 reduce/reduce
State 156 conflicts: 1 shift/reduce
State 165 conflicts: 3 shift/reduce
State 185 conflicts: 6 shift/reduce
State 191 conflicts: 6 reduce/reduce
State 192 conflicts: 6 reduce/reduce


Grammar

    0 $accept: desc_algoritmo $end

    1 desc_algoritmo: BI_ALGORITMO BI_IDENTIFICADOR BI_COMP_SEQ cabecera_alg bloque_alg BI_FALGORITMO

    2 cabecera_alg: decl_globales decl_a_f decl_ent_sal BI_COMENTARIO

    3 bloque_alg: bloque BI_COMENTARIO

    4 decl_globales: declaracion_tipo decl_globales
    5              | declaracion_cte decl_globales
    6              | %empty

    7 decl_a_f: accion_d decl_a_f
    8         | funcion_d decl_a_f
    9         | %empty

   10 bloque: declaraciones instrucciones

   11 declaraciones: declaracion_tipo declaraciones
   12              | declaracion_cte declaraciones
   13              | declaracion_var declaraciones
   14              | %empty

   15 declaracion_tipo: BI_TIPO lista_d_tipo BI_FTIPO BI_COMP_SEQ

   16 declaracion_cte: BI_CONST lista_d_cte BI_FCONST BI_COMP_SEQ

   17 declaracion_var: BI_VAR lista_d_var BI_FVAR BI_COMP_SEQ

   18 lista_d_tipo: BI_IDENTIFICADOR BI_CREACION_TIPO d_tipo BI_COMP_SEQ lista_d_tipo
   19             | %empty

   20 d_tipo: tipo_base
   21       | BI_IDENTIFICADOR
   22       | BI_REF d_tipo
   23       | expresion_t BI_SUBRANGO expresion_t
   24       | BI_TUPLA lista_campos BI_FTUPLA
   25       | BI_TABLA BI_INI_ARRAY expresion_t BI_SUBRANGO expresion_t BI_FIN_ARRAY BI_DE d_tipo

   26 expresion_t: expresion
   27            | BI_LIT_CARACTER

   28 lista_campos: BI_IDENTIFICADOR BI_DEF_TYPEVAR d_tipo BI_COMP_SEQ lista_campos
   29             | %empty

   30 tipo_base: BI_PR_ENTERO
   31          | BI_PR_REAL
   32          | BI_PR_BOOLEANO
   33          | BI_PR_CARACTER
   34          | BI_PR_CADENA

   35 literal: BI_LIT_ENTERO
   36        | BI_LIT_REAL
   37        | BI_LIT_BOOLEANO
   38        | BI_LIT_CARACTER
   39        | BI_LIT_CADENA

   40 lista_d_cte: BI_IDENTIFICADOR BI_CREACION_TIPO literal BI_COMP_SEQ lista_d_cte
   41            | %empty

   42 lista_d_var: lista_id BI_DEF_TYPEVAR BI_IDENTIFICADOR BI_COMP_SEQ lista_d_var
   43            | lista_id BI_DEF_TYPEVAR d_tipo BI_COMP_SEQ lista_d_var
   44            | %empty

   45 lista_id: BI_IDENTIFICADOR BI_SEPARADOR lista_id
   46         | BI_IDENTIFICADOR

   47 decl_ent_sal: decl_ent
   48             | decl_ent decl_sal
   49             | decl_sal

   50 decl_ent: BI_ENT lista_d_var

   51 decl_sal: BI_SAL lista_d_var

   52 expresion: exp_a
   53          | exp_b
   54          | funcion_ll

   55 literal_numerico: BI_LIT_ENTERO
   56                 | BI_LIT_REAL

   57 exp_a: exp_a BI_SUMA exp_a
   58      | exp_a BI_RESTA exp_a
   59      | exp_a BI_MULTIPLICACION
   60      | exp_a BI_DIVISION exp_a
   61      | exp_a BI_MOD exp_a
   62      | exp_a BI_DIV exp_a
   63      | BI_PAR_APER exp_a BI_PAR_CIER
   64      | operando
   65      | literal_numerico
   66      | BI_RESTA exp_a

   67 oprel: BI_IGUALDAD
   68      | BI_DISTINTO
   69      | BI_MAYOR
   70      | BI_MENOR
   71      | BI_MAYOR_IGUAL
   72      | BI_MENOR_IGUAL

   73 exp_b: exp_b BI_Y exp_b
   74      | exp_b BI_O exp_b
   75      | BI_NO exp_b
   76      | operando
   77      | literal_numerico
   78      | BI_VERDADERO
   79      | BI_FALSO
   80      | expresion oprel expresion
   81      | BI_PAR_APER exp_b BI_PAR_CIER

   82 operando: BI_IDENTIFICADOR
   83         | operando BI_PUNTO operando
   84         | operando BI_INI_ARRAY expresion BI_FIN_ARRAY
   85         | operando BI_REF

   86 instrucciones: instruccion BI_COMP_SEQ instrucciones
   87              | instruccion

   88 instruccion: BI_CONTINUAR
   89            | asignacion
   90            | alternativa
   91            | iteracion
   92            | accion_ll

   93 asignacion: operando BI_ASIGNACION expresion

   94 alternativa: BI_SI expresion BI_ENTONCES instrucciones lista_opciones BI_FSI

   95 lista_opciones: BI_SINOSI expresion BI_ENTONCES instrucciones lista_opciones
   96               | %empty

   97 iteracion: it_cota_fija
   98          | it_cota_exp

   99 it_cota_exp: BI_MIENTRAS expresion BI_HACER instrucciones BI_FMIENTRAS

  100 it_cota_fija: BI_PARA BI_IDENTIFICADOR BI_ASIGNACION expresion BI_HASTA expresion BI_HACER instrucciones BI_FPARA

  101 accion_d: BI_ACCION a_cabecera bloque BI_FACCION

  102 funcion_d: BI_FUNCION f_cabecera bloque BI_DEV expresion BI_FFUNCION

  103 a_cabecera: BI_IDENTIFICADOR BI_PAR_APER d_par_form

  104 f_cabecera: BI_IDENTIFICADOR BI_PAR_APER lista_d_var BI_PAR_CIER BI_COMP_SEQ

  105 d_par_form: d_p_form BI_COMP_SEQ d_par_form
  106           | %empty

  107 d_p_form: BI_ENT lista_id BI_DEF_TYPEVAR d_tipo
  108         | BI_SAL lista_id BI_DEF_TYPEVAR d_tipo
  109         | BI_E_S lista_id BI_DEF_TYPEVAR d_tipo

  110 accion_ll: BI_IDENTIFICADOR BI_PAR_APER l_ll BI_PAR_CIER

  111 funcion_ll: BI_IDENTIFICADOR BI_PAR_APER l_ll BI_PAR_CIER

  112 l_ll: expresion BI_SEPARADOR l_ll
  113     | expresion


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    BI_COMENTARIO (258) 2 3
    BI_LIT_ENTERO (259) 35 55
    BI_LIT_REAL (260) 36 56
    BI_LIT_BOOLEANO (261) 37
    BI_LIT_CARACTER (262) 27 38
    BI_LIT_CADENA (263) 39
    BI_PR_ENTERO (264) 30
    BI_PR_REAL (265) 31
    BI_PR_BOOLEANO (266) 32
    BI_PR_CARACTER (267) 33
    BI_PR_CADENA (268) 34
    BI_ACCION (269) 101
    BI_FACCION (270) 101
    BI_ALGORITMO (271) 1
    BI_FALGORITMO (272) 1
    BI_CONST (273) 16
    BI_FCONST (274) 16
    BI_FUNCION (275) 102
    BI_FFUNCION (276) 102
    BI_MIENTRAS (277) 99
    BI_FMIENTRAS (278) 99
    BI_PARA (279) 100
    BI_FPARA (280) 100
    BI_SI (281) 94
    BI_FSI (282) 94
    BI_TIPO (283) 15
    BI_FTIPO (284) 15
    BI_TUPLA (285) 24
    BI_FTUPLA (286) 24
    BI_VAR (287) 17
    BI_FVAR (288) 17
    BI_CONTINUAR (289) 88
    BI_DE (290) 25
    BI_DEV (291) 102
    BI_DIV (292) 62
    BI_ENT (293) 50 107
    BI_E_S (294) 109
    BI_FALSO (295) 79
    BI_HACER (296) 99 100
    BI_HASTA (297) 100
    BI_REF (298) 22 85
    BI_SAL (299) 51 108
    BI_TABLA (300) 25
    BI_VERDADERO (301) 78
    BI_Y (302) 73
    BI_O (303) 74
    BI_NO (304) 75
    BI_ASIGNACION (305) 93 100
    BI_COMP_SEQ (306) 1 15 16 17 18 28 40 42 43 86 104 105
    BI_SEPARADOR (307) 45 112
    BI_SUBRANGO (308) 23 25
    BI_DEF_TYPEVAR (309) 28 42 43 107 108 109
    BI_ENTONCES (310) 94 95
    BI_CREACION_TIPO (311) 18 40
    BI_SINOSI (312) 95
    BI_INI_ARRAY (313) 25 84
    BI_FIN_ARRAY (314) 25 84
    BI_IDENTIFICADOR (315) 1 18 21 28 40 42 45 46 82 100 103 104 110 111
    BI_PUNTO (316) 83
    BI_PAR_APER (317) 63 81 103 104 110 111
    BI_PAR_CIER (318) 63 81 104 110 111
    BI_SUMA (319) 57
    BI_RESTA (320) 58 66
    BI_MULTIPLICACION (321) 59
    BI_DIVISION (322) 60
    BI_MOD (323) 61
    BI_MENOR (324) 70
    BI_MAYOR (325) 69
    BI_MENOR_IGUAL (326) 72
    BI_MAYOR_IGUAL (327) 71
    BI_IGUALDAD (328) 67
    BI_DISTINTO (329) 68


Nonterminals, with rules where they appear

    $accept (75)
        on left: 0
    desc_algoritmo (76)
        on left: 1
        on right: 0
    cabecera_alg (77)
        on left: 2
        on right: 1
    bloque_alg (78)
        on left: 3
        on right: 1
    decl_globales (79)
        on left: 4 5 6
        on right: 2 4 5
    decl_a_f (80)
        on left: 7 8 9
        on right: 2 7 8
    bloque (81)
        on left: 10
        on right: 3 101 102
    declaraciones (82)
        on left: 11 12 13 14
        on right: 10 11 12 13
    declaracion_tipo (83)
        on left: 15
        on right: 4 11
    declaracion_cte (84)
        on left: 16
        on right: 5 12
    declaracion_var (85)
        on left: 17
        on right: 13
    lista_d_tipo (86)
        on left: 18 19
        on right: 15 18
    d_tipo (87)
        on left: 20 21 22 23 24 25
        on right: 18 22 25 28 43 107 108 109
    expresion_t (88)
        on left: 26 27
        on right: 23 25
    lista_campos (89)
        on left: 28 29
        on right: 24 28
    tipo_base (90)
        on left: 30 31 32 33 34
        on right: 20
    literal (91)
        on left: 35 36 37 38 39
        on right: 40
    lista_d_cte (92)
        on left: 40 41
        on right: 16 40
    lista_d_var (93)
        on left: 42 43 44
        on right: 17 42 43 50 51 104
    lista_id (94)
        on left: 45 46
        on right: 42 43 45 107 108 109
    decl_ent_sal (95)
        on left: 47 48 49
        on right: 2
    decl_ent (96)
        on left: 50
        on right: 47 48
    decl_sal (97)
        on left: 51
        on right: 48 49
    expresion (98)
        on left: 52 53 54
        on right: 26 80 84 93 94 95 99 100 102 112 113
    literal_numerico (99)
        on left: 55 56
        on right: 65 77
    exp_a (100)
        on left: 57 58 59 60 61 62 63 64 65 66
        on right: 52 57 58 59 60 61 62 63 66
    oprel (101)
        on left: 67 68 69 70 71 72
        on right: 80
    exp_b (102)
        on left: 73 74 75 76 77 78 79 80 81
        on right: 53 73 74 75 81
    operando (103)
        on left: 82 83 84 85
        on right: 64 76 83 84 85 93
    instrucciones (104)
        on left: 86 87
        on right: 10 86 94 95 99 100
    instruccion (105)
        on left: 88 89 90 91 92
        on right: 86 87
    asignacion (106)
        on left: 93
        on right: 89
    alternativa (107)
        on left: 94
        on right: 90
    lista_opciones (108)
        on left: 95 96
        on right: 94 95
    iteracion (109)
        on left: 97 98
        on right: 91
    it_cota_exp (110)
        on left: 99
        on right: 98
    it_cota_fija (111)
        on left: 100
        on right: 97
    accion_d (112)
        on left: 101
        on right: 7
    funcion_d (113)
        on left: 102
        on right: 8
    a_cabecera (114)
        on left: 103
        on right: 101
    f_cabecera (115)
        on left: 104
        on right: 102
    d_par_form (116)
        on left: 105 106
        on right: 103 105
    d_p_form (117)
        on left: 107 108 109
        on right: 105
    accion_ll (118)
        on left: 110
        on right: 92
    funcion_ll (119)
        on left: 111
        on right: 54
    l_ll (120)
        on left: 112 113
        on right: 110 111 112


State 0

    0 $accept: • desc_algoritmo $end

    BI_ALGORITMO  shift, and go to state 1

    desc_algoritmo  go to state 2


State 1

    1 desc_algoritmo: BI_ALGORITMO • BI_IDENTIFICADOR BI_COMP_SEQ cabecera_alg bloque_alg BI_FALGORITMO

    BI_IDENTIFICADOR  shift, and go to state 3


State 2

    0 $accept: desc_algoritmo • $end

    $end  shift, and go to state 4


State 3

    1 desc_algoritmo: BI_ALGORITMO BI_IDENTIFICADOR • BI_COMP_SEQ cabecera_alg bloque_alg BI_FALGORITMO

    BI_COMP_SEQ  shift, and go to state 5


State 4

    0 $accept: desc_algoritmo $end •

    $default  accept


State 5

    1 desc_algoritmo: BI_ALGORITMO BI_IDENTIFICADOR BI_COMP_SEQ • cabecera_alg bloque_alg BI_FALGORITMO

    BI_CONST  shift, and go to state 6
    BI_TIPO   shift, and go to state 7

    $default  reduce using rule 6 (decl_globales)

    cabecera_alg      go to state 8
    decl_globales     go to state 9
    declaracion_tipo  go to state 10
    declaracion_cte   go to state 11


State 6

   16 declaracion_cte: BI_CONST • lista_d_cte BI_FCONST BI_COMP_SEQ

    BI_IDENTIFICADOR  shift, and go to state 12

    $default  reduce using rule 41 (lista_d_cte)

    lista_d_cte  go to state 13


State 7

   15 declaracion_tipo: BI_TIPO • lista_d_tipo BI_FTIPO BI_COMP_SEQ

    BI_IDENTIFICADOR  shift, and go to state 14

    $default  reduce using rule 19 (lista_d_tipo)

    lista_d_tipo  go to state 15


State 8

    1 desc_algoritmo: BI_ALGORITMO BI_IDENTIFICADOR BI_COMP_SEQ cabecera_alg • bloque_alg BI_FALGORITMO

    BI_CONST  shift, and go to state 6
    BI_TIPO   shift, and go to state 7
    BI_VAR    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    bloque_alg        go to state 17
    bloque            go to state 18
    declaraciones     go to state 19
    declaracion_tipo  go to state 20
    declaracion_cte   go to state 21
    declaracion_var   go to state 22


State 9

    2 cabecera_alg: decl_globales • decl_a_f decl_ent_sal BI_COMENTARIO

    BI_ACCION   shift, and go to state 23
    BI_FUNCION  shift, and go to state 24

    $default  reduce using rule 9 (decl_a_f)

    decl_a_f   go to state 25
    accion_d   go to state 26
    funcion_d  go to state 27


State 10

    4 decl_globales: declaracion_tipo • decl_globales

    BI_CONST  shift, and go to state 6
    BI_TIPO   shift, and go to state 7

    $default  reduce using rule 6 (decl_globales)

    decl_globales     go to state 28
    declaracion_tipo  go to state 10
    declaracion_cte   go to state 11


State 11

    5 decl_globales: declaracion_cte • decl_globales

    BI_CONST  shift, and go to state 6
    BI_TIPO   shift, and go to state 7

    $default  reduce using rule 6 (decl_globales)

    decl_globales     go to state 29
    declaracion_tipo  go to state 10
    declaracion_cte   go to state 11


State 12

   40 lista_d_cte: BI_IDENTIFICADOR • BI_CREACION_TIPO literal BI_COMP_SEQ lista_d_cte

    BI_CREACION_TIPO  shift, and go to state 30


State 13

   16 declaracion_cte: BI_CONST lista_d_cte • BI_FCONST BI_COMP_SEQ

    BI_FCONST  shift, and go to state 31


State 14

   18 lista_d_tipo: BI_IDENTIFICADOR • BI_CREACION_TIPO d_tipo BI_COMP_SEQ lista_d_tipo

    BI_CREACION_TIPO  shift, and go to state 32


State 15

   15 declaracion_tipo: BI_TIPO lista_d_tipo • BI_FTIPO BI_COMP_SEQ

    BI_FTIPO  shift, and go to state 33


State 16

   17 declaracion_var: BI_VAR • lista_d_var BI_FVAR BI_COMP_SEQ

    BI_IDENTIFICADOR  shift, and go to state 34

    $default  reduce using rule 44 (lista_d_var)

    lista_d_var  go to state 35
    lista_id     go to state 36


State 17

    1 desc_algoritmo: BI_ALGORITMO BI_IDENTIFICADOR BI_COMP_SEQ cabecera_alg bloque_alg • BI_FALGORITMO

    BI_FALGORITMO  shift, and go to state 37


State 18

    3 bloque_alg: bloque • BI_COMENTARIO

    BI_COMENTARIO  shift, and go to state 38


State 19

   10 bloque: declaraciones • instrucciones

    BI_MIENTRAS       shift, and go to state 39
    BI_PARA           shift, and go to state 40
    BI_SI             shift, and go to state 41
    BI_CONTINUAR      shift, and go to state 42
    BI_IDENTIFICADOR  shift, and go to state 43

    operando       go to state 44
    instrucciones  go to state 45
    instruccion    go to state 46
    asignacion     go to state 47
    alternativa    go to state 48
    iteracion      go to state 49
    it_cota_exp    go to state 50
    it_cota_fija   go to state 51
    accion_ll      go to state 52


State 20

   11 declaraciones: declaracion_tipo • declaraciones

    BI_CONST  shift, and go to state 6
    BI_TIPO   shift, and go to state 7
    BI_VAR    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    declaraciones     go to state 53
    declaracion_tipo  go to state 20
    declaracion_cte   go to state 21
    declaracion_var   go to state 22


State 21

   12 declaraciones: declaracion_cte • declaraciones

    BI_CONST  shift, and go to state 6
    BI_TIPO   shift, and go to state 7
    BI_VAR    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    declaraciones     go to state 54
    declaracion_tipo  go to state 20
    declaracion_cte   go to state 21
    declaracion_var   go to state 22


State 22

   13 declaraciones: declaracion_var • declaraciones

    BI_CONST  shift, and go to state 6
    BI_TIPO   shift, and go to state 7
    BI_VAR    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    declaraciones     go to state 55
    declaracion_tipo  go to state 20
    declaracion_cte   go to state 21
    declaracion_var   go to state 22


State 23

  101 accion_d: BI_ACCION • a_cabecera bloque BI_FACCION

    BI_IDENTIFICADOR  shift, and go to state 56

    a_cabecera  go to state 57


State 24

  102 funcion_d: BI_FUNCION • f_cabecera bloque BI_DEV expresion BI_FFUNCION

    BI_IDENTIFICADOR  shift, and go to state 58

    f_cabecera  go to state 59


State 25

    2 cabecera_alg: decl_globales decl_a_f • decl_ent_sal BI_COMENTARIO

    BI_ENT  shift, and go to state 60
    BI_SAL  shift, and go to state 61

    decl_ent_sal  go to state 62
    decl_ent      go to state 63
    decl_sal      go to state 64


State 26

    7 decl_a_f: accion_d • decl_a_f

    BI_ACCION   shift, and go to state 23
    BI_FUNCION  shift, and go to state 24

    $default  reduce using rule 9 (decl_a_f)

    decl_a_f   go to state 65
    accion_d   go to state 26
    funcion_d  go to state 27


State 27

    8 decl_a_f: funcion_d • decl_a_f

    BI_ACCION   shift, and go to state 23
    BI_FUNCION  shift, and go to state 24

    $default  reduce using rule 9 (decl_a_f)

    decl_a_f   go to state 66
    accion_d   go to state 26
    funcion_d  go to state 27


State 28

    4 decl_globales: declaracion_tipo decl_globales •

    $default  reduce using rule 4 (decl_globales)


State 29

    5 decl_globales: declaracion_cte decl_globales •

    $default  reduce using rule 5 (decl_globales)


State 30

   40 lista_d_cte: BI_IDENTIFICADOR BI_CREACION_TIPO • literal BI_COMP_SEQ lista_d_cte

    BI_LIT_ENTERO    shift, and go to state 67
    BI_LIT_REAL      shift, and go to state 68
    BI_LIT_BOOLEANO  shift, and go to state 69
    BI_LIT_CARACTER  shift, and go to state 70
    BI_LIT_CADENA    shift, and go to state 71

    literal  go to state 72


State 31

   16 declaracion_cte: BI_CONST lista_d_cte BI_FCONST • BI_COMP_SEQ

    BI_COMP_SEQ  shift, and go to state 73


State 32

   18 lista_d_tipo: BI_IDENTIFICADOR BI_CREACION_TIPO • d_tipo BI_COMP_SEQ lista_d_tipo

    BI_LIT_ENTERO     shift, and go to state 74
    BI_LIT_REAL       shift, and go to state 75
    BI_LIT_CARACTER   shift, and go to state 76
    BI_PR_ENTERO      shift, and go to state 77
    BI_PR_REAL        shift, and go to state 78
    BI_PR_BOOLEANO    shift, and go to state 79
    BI_PR_CARACTER    shift, and go to state 80
    BI_PR_CADENA      shift, and go to state 81
    BI_TUPLA          shift, and go to state 82
    BI_FALSO          shift, and go to state 83
    BI_REF            shift, and go to state 84
    BI_TABLA          shift, and go to state 85
    BI_VERDADERO      shift, and go to state 86
    BI_NO             shift, and go to state 87
    BI_IDENTIFICADOR  shift, and go to state 88
    BI_PAR_APER       shift, and go to state 89
    BI_RESTA          shift, and go to state 90

    d_tipo            go to state 91
    expresion_t       go to state 92
    tipo_base         go to state 93
    expresion         go to state 94
    literal_numerico  go to state 95
    exp_a             go to state 96
    exp_b             go to state 97
    operando          go to state 98
    funcion_ll        go to state 99


State 33

   15 declaracion_tipo: BI_TIPO lista_d_tipo BI_FTIPO • BI_COMP_SEQ

    BI_COMP_SEQ  shift, and go to state 100


State 34

   45 lista_id: BI_IDENTIFICADOR • BI_SEPARADOR lista_id
   46         | BI_IDENTIFICADOR •

    BI_SEPARADOR  shift, and go to state 101

    $default  reduce using rule 46 (lista_id)


State 35

   17 declaracion_var: BI_VAR lista_d_var • BI_FVAR BI_COMP_SEQ

    BI_FVAR  shift, and go to state 102


State 36

   42 lista_d_var: lista_id • BI_DEF_TYPEVAR BI_IDENTIFICADOR BI_COMP_SEQ lista_d_var
   43            | lista_id • BI_DEF_TYPEVAR d_tipo BI_COMP_SEQ lista_d_var

    BI_DEF_TYPEVAR  shift, and go to state 103


State 37

    1 desc_algoritmo: BI_ALGORITMO BI_IDENTIFICADOR BI_COMP_SEQ cabecera_alg bloque_alg BI_FALGORITMO •

    $default  reduce using rule 1 (desc_algoritmo)


State 38

    3 bloque_alg: bloque BI_COMENTARIO •

    $default  reduce using rule 3 (bloque_alg)


State 39

   99 it_cota_exp: BI_MIENTRAS • expresion BI_HACER instrucciones BI_FMIENTRAS

    BI_LIT_ENTERO     shift, and go to state 74
    BI_LIT_REAL       shift, and go to state 75
    BI_FALSO          shift, and go to state 83
    BI_VERDADERO      shift, and go to state 86
    BI_NO             shift, and go to state 87
    BI_IDENTIFICADOR  shift, and go to state 104
    BI_PAR_APER       shift, and go to state 89
    BI_RESTA          shift, and go to state 90

    expresion         go to state 105
    literal_numerico  go to state 95
    exp_a             go to state 96
    exp_b             go to state 97
    operando          go to state 98
    funcion_ll        go to state 99


State 40

  100 it_cota_fija: BI_PARA • BI_IDENTIFICADOR BI_ASIGNACION expresion BI_HASTA expresion BI_HACER instrucciones BI_FPARA

    BI_IDENTIFICADOR  shift, and go to state 106


State 41

   94 alternativa: BI_SI • expresion BI_ENTONCES instrucciones lista_opciones BI_FSI

    BI_LIT_ENTERO     shift, and go to state 74
    BI_LIT_REAL       shift, and go to state 75
    BI_FALSO          shift, and go to state 83
    BI_VERDADERO      shift, and go to state 86
    BI_NO             shift, and go to state 87
    BI_IDENTIFICADOR  shift, and go to state 104
    BI_PAR_APER       shift, and go to state 89
    BI_RESTA          shift, and go to state 90
